<resources>
    <string name="app_name">Fuar Raporu</string>
    <string name="kullaniciAdi">Kullanıcı Adı</string>
    <string name="btngiris">Giriş</string>
    <string name="firmaismi">ARFESAN ARKAN</string>
    <string name="firmaismi2">FREN ELEMANLARI SAN. TİC. A.Ş.</string>
    <string name="uygulamaismi">FUAR RAPORU UYGULAMASI</string>
    <string name="title_activity_rapor">Rapor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rapor_yaz">Rapor Yaz</string>
    <string name="grafikler">Grafikler</string>
</resources>
